--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-<<<<<<< HEAD
   "name": "amistapp-frontend",
-=======
-  "name": "amistapp_frontend",
->>>>>>> 7edc912eb716b41f89e346c5f1285fd1cb1682c5
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,28 +8,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.82.0",
-<<<<<<< HEAD
-    "@vitejs/plugin-react": "^3.1.0",
-=======
->>>>>>> 7edc912eb716b41f89e346c5f1285fd1cb1682c5
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "@supabase/supabase-js": "^2.39.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9"
-=======
-    "typescript": "^5.3.3",
-    "vite": "^5.0.0"
->>>>>>> 7edc912eb716b41f89e346c5f1285fd1cb1682c5
   }
 }
